--- a/pon.html
+++ b/pon.html
@@ -1,23 +1,36 @@
-<html>
+<!DOCTYPE html>
+<html lang="ru">
 <body>
-<h1>Заголовок</h1>
-<p>Абзац текста</p>
-<p>
-<b>Жирный текст</b> 
-<p><q>Цитата</q></p>
-</p>
-<ol>
-<li>первый пункт</li>
-<li>второй пункт</li>
-<li>третий пункт</li>
-</ol>
+
+<h1>Ну, заголовок</h1>
+
+<p>Это первый абзац текста...</p>
+
+<p>Это второй абзац текста, напишу еще <b>жирное выделение</b> </p>
+
+<h2>Маркированный список</h2>
 <ul>
-<li>один</li>
-<li>два</li>
-<li>три</li>
+    <li>один</li>
+    <li>два</li>
+    <li>три</li>
 </ul>
-<img scr="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRlD3J_7pMZ3hFwBwWFw00TEcjAwaIjePEnlQ&s"  alt = котиик>
-<blockquote></blockquote>
-<a href =https://vk.com/feed target="_blank">"Перейти на сайт"</a>
+
+<h2>Нумерованный список</h2>
+<ol>
+    <li>one</li>
+    <li>two</li>
+    <li>tree</li>
+</ol>
+
+<img src="https://resizer.mail.ru/p/2268dda8-20f1-5684-8e46-1ce206d6808a/AQAKSxRdOMMduls_SPyQfnfrvxD4nZ3JC8XfWsjZUOrTdixhFEWfYvie9Q5Mffstkox4mFIXwYHGHWH6_clbmOMyW28.webp" alt="хз ваще, вот котик">
+
+<blockquote>
+      это цитата ХD
+</blockquote>
+
+<p>ну, хз что писать, <q>хочу амняма</q>, и всё.</p>
+
+ <a href="https://vk.com/feed" target="_blank">ССЫЛКА НА ВК</a>
+
 </body>
 </html>
